--- a/ppt-view.html
+++ b/ppt-view.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-<script>
+<!-- <script>
         
 var pptData = { "command": "getPresentationList", "service": "UserService" };
 var url = "service/WebService.aspx";
@@ -105,6 +105,6 @@ app.controller('pptCtrl', function($scope, $http) {
         }
     };
 });
-</script>
+</script> -->
 </body>
 </html>
