--- a/create.html
+++ b/create.html
@@ -22,7 +22,7 @@
 
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 lgMarginTop noPadding shortPanel">
         <div class="container">
-            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 noPadding">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 noPadding mTextCenter">
                 <select  class="selectpicker"  name="catagory" ng-model="data.categoryname" >
                         <option value="">Select Catagory</option> 
                         <option value="General ART">General ART</option>
@@ -50,10 +50,10 @@
             </div>
         </div>
     </div>
-    <div class="main col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding ">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 smMarginTop">
+    <div class="main col-xs-12 col-sm-12 col-md-12 col-lg-12 lgMarginTop3 noPadding ">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <div class="container noPaddingS">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding smMarginTop" ng-controller="myCtrl">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding " ng-controller="myCtrl">
                     <div class='col-xs-6 col-sm-4 col-md-3 col-lg-3' ng-repeat="data in responseData | filter: data">
                         <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding thumbs'>
                             <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding '>
