--- a/slide-view.html
+++ b/slide-view.html
@@ -41,8 +41,8 @@
         </div>
     </div>
 
-    <div class="main col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding ">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 smMarginTop">
+    <div class="main col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding lgMarginTop3">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <div class="container noPaddingS">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadding smMarginTop" >
                     <div class='col-xs-6 col-sm-4 col-md-3 col-lg-3' ng-repeat="slideViewData in responseData | filter: slideViewData ">
